# NiFramework

./: .clang-format  CMakeLists.txt  README.md  build.sh  run.sh
lib/common/: CMakeLists.txt
lib/common/event/: actor.h  bus.cpp  bus.h  event.h
lib/common/include/: ni_condwaiter.h  ni_fmtlog.h  ni_log.h
lib/ni_common/: CMakeLists.txt  ni_fifo.cpp  ni_obj_pool.cpp  ni_spinlock.cpp  niconfig.h  niconfig.h.in  test.cpp
lib/ni_common/3thParty/libhv-1.3.1/: CMakeLists.txt
lib/ni_common/3thParty/libsigc++-3.6.0/: CMakeLists.txt
lib/ni_common/3thParty/libsigc++-3.6.0/untracked/MSVC_NMake/: sigc.rc
lib/ni_common/3thParty/libsigc++-3.6.0/untracked/docs/docs/manual/html/: chapter-reference.html  sect-disconnecting.html
lib/ni_common/3thParty/libsigc++-3.6.0/untracked/docs/docs/reference/: libsigc++-3.0.devhelp2  libsigc++-3.0.tag
lib/ni_common/3thParty/libsigc++-3.6.0/untracked/docs/docs/reference/html/: annotated.html  classT__func.html  classT__return.html  classbasic__streambuf.html  classbasic__streambuf__inherit__graph.map  classbasic__streambuf__inherit__graph.md5  classes.html  classmask__based__range__hashing.html  classmod__based__range__hashing.html  classsigc_1_1bound__argument-members.html  classsigc_1_1bound__argument.html  classsigc_1_1bound__argument_3_01std_1_1reference__wrapper_3_01T__wrapped_01_4_01_4-members.html  classsigc_1_1bound__argument_3_01std_1_1reference__wrapper_3_01T__wrapped_01_4_01_4.html  classsigc_1_1bound__argument_3_01std_1_1reference__wrapper_3_01const_01T__wrapped_01_4_01_4-members.html  classsigc_1_1bound__argument_3_01std_1_1reference__wrapper_3_01const_01T__wrapped_01_4_01_4.html  classsigc_1_1bound__mem__functor-members.html  classsigc_1_1bound__mem__functor.html  classsigc_1_1bound__mem__functor__inherit__graph.map  classsigc_1_1bound__mem__functor__inherit__graph.md5  classsigc_1_1limit__reference-members.html  classsigc_1_1limit__reference.html  classsigc_1_1limit__reference_3_01T__type_00_01true_01_4-members.html  classsigc_1_1limit__reference_3_01T__type_00_01true_01_4.html  classsigc_1_1mem__functor-members.html  classsigc_1_1mem__functor.html  classsigc_1_1pointer__functor.html  classsigc_1_1pointer__functor_3_01T__return_07T__args_8_8_8_08_4-members.html  classsigc_1_1pointer__functor_3_01T__return_07T__args_8_8_8_08_4.html  classsigc_1_1signal_3_01T__return_07T__arg_8_8_8_08_4-members.html  classsigc_1_1signal_3_01T__return_07T__arg_8_8_8_08_4.html  classsigc_1_1signal_3_01T__return_07T__arg_8_8_8_08_4_1_1accumulated-members.html  classsigc_1_1signal_3_01T__return_07T__arg_8_8_8_08_4_1_1accumulated.html  classsigc_1_1signal_3_01T__return_07T__arg_8_8_8_08_4_1_1accumulated__inherit__graph.map  classsigc_1_1signal_3_01T__return_07T__arg_8_8_8_08_4_1_1accumulated__inherit__graph.md5  classsigc_1_1signal_3_01T__return_07T__arg_8_8_8_08_4__inherit__graph.map  classsigc_1_1signal_3_01T__return_07T__arg_8_8_8_08_4__inherit__graph.md5  classsigc_1_1signal__with__accumulator-members.html  classsigc_1_1signal__with__accumulator.html  classsigc_1_1signal__with__accumulator__inherit__graph.map  classsigc_1_1signal__with__accumulator__inherit__graph.md5  (+173 more)
lib/ni_common/3thParty/spdlog-1.11.0/: CMakeLists.txt
lib/ni_common/cmake/: utils.cmake
lib/ni_common/event/: actor.h  bus.cpp  bus.h  event.h  ni_actor.h  ni_bus.cpp  ni_bus.h  ni_iactor.h
lib/ni_common/include/: ni_common.h  ni_condwaiter.h  ni_fifo.h  ni_glog.h  ni_log.h  ni_obj_fixed_pool.h  ni_obj_pool.h  ni_pingpong_buffer.h  ni_singleton.h  ni_spdlog.h  ni_spin_lock.h  ni_spinlock.h  niconfig.h  niexport.h
lib/ni_common/log/: ni_fmtlog.h  ni_glog.h  ni_log.cpp  ni_log.h  ni_spdlog.h
platform/arm64/: imx6ull.cmake
src/: CMakeLists.txt  main.cpp  ni_ringbuffer.cpp  ni_ringbuffer.h  wav_helper.cpp  wav_helper.h
src/common/: CMakeLists.txt  ni_log.cpp
src/common/include/: ni_log.h
